# Computer-Vision

Binary Vision/: dilate.cpp  erode.cpp
Color Clustering/: kmeans.cpp
Content-Based Image Retrieval/: CMakeLists.txt  HW6-report by Zhuonan Sun.doc  attributes.cpp  computeDist.cpp  computeDist.sh  conrgn.cpp  dilate.cpp  erode.cpp  get_attributes.sh  kmeans.cpp  merge.cpp  query.cpp  query.sh  utils.cpp
Feature Detection and Matching/: features.cpp
Finding Callouts/: findcirc.cpp
Skin Finding/: CMakeLists.txt  HW4-report by Zhuonan Sun.doc  accuracy.cpp  accuracy.sh  arff.cpp  arff.sh  arff_begin.cpp  kmeans.cpp  kmeans.sh  prediction.cpp  prediction.sh
